--- a/Algorithms_Training.ipynb
+++ b/Algorithms_Training.ipynb
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1-2. DFS Path finder"
+    "## 2-2. DFS Path finder"
    ]
   },
   {
@@ -221,6 +221,13 @@
    ],
    "source": [
     "print(dfs_paths(korea, '평양', '부산'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Trie"
    ]
   },
   {
