--- a/Baekjoon Algorithms/UseString.ipynb
+++ b/Baekjoon Algorithms/UseString.ipynb
@@ -192,6 +192,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Constant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "734 893\n",
+      "437\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(max([int(n[::-1]) for n in input().split(' ')]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
