--- a/Baekjoon Algorithms/UseString.ipynb
+++ b/Baekjoon Algorithms/UseString.ipynb
@@ -217,6 +217,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "UNUCIC\n",
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "dial_dict = {\n",
+    "    ('A', 'B', 'C') : 3,\n",
+    "    ('D', 'E', 'F') : 4,\n",
+    "    ('G', 'H', 'I') : 5,\n",
+    "    ('J', 'K', 'L') : 6,\n",
+    "    ('M', 'N', 'O') : 7,\n",
+    "    ('P', 'Q', 'R', 'S') : 8,\n",
+    "    ('T', 'U', 'V') : 9,\n",
+    "    ('W', 'X', 'Y', 'Z') : 10,\n",
+    "}\n",
+    "\n",
+    "code = input()\n",
+    "total_sec = 0\n",
+    "\n",
+    "for ch in code:\n",
+    "    for li in dial_dict.keys():\n",
+    "        if ch in li:\n",
+    "            total_sec += dial_dict[li]\n",
+    "            \n",
+    "print(total_sec)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
