--- a/fromUntitled.ipynb
+++ b/fromUntitled.ipynb
@@ -1048,11 +1048,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# C102"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-58.3754496\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = 'Email Coding C102.txt'\n",
+    "f = open(filename, 'r+')\n",
+    "a_matrix = f.read().split('|')[0] # from 0 to 9\n",
+    "row_by_row = a_matrix.split(';') # len == 200 rows\n",
+    "a_row = [float(num) for num in row_by_row[0].split(',')] # from 0 to 199\n",
+    "elem = a_row[0] # from 0 to 199\n",
+    "print(elem)\n",
+    "f.close()"
+   ]
   },
   {
    "cell_type": "code",
