update support line

--- a/Email Coding test_Seeyong Lee.ipynb
+++ b/Email Coding test_Seeyong Lee.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "4  0.913687  0.732714    0.188189    0.237336"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -187,13 +187,13 @@
        "4 -1.138574 -1.141578  -0.457140 -0.164135"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# data normalizing\n",
+    "# data 정규화 작업\n",
     "df = (df - df.mean()) / df.std()\n",
     "\n",
     "df.head()"
@@ -201,17 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Intercept: \n",
-      " 2.506582105564225e-15\n",
-      "Coefficients: \n",
-      " [-0.46758639  0.5655295   0.22412999]\n"
+      "절편 =  2.506582105564225e-15\n",
+      "기울기 =  [-0.46758639  0.5655295   0.22412999]\n"
      ]
     }
    ],
@@ -227,21 +225,19 @@
     "# regression 학습\n",
     "regr.fit(X, y)\n",
     "\n",
-    "print('Intercept: \\n', regr.intercept_)\n",
-    "print('Coefficients: \\n', regr.coef_)"
+    "print('절편 = ', regr.intercept_)\n",
+    "print('기울기 = ', regr.coef_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slope: [-0.46758639  0.5655295   0.22412999]\n",
-      "Intercept: 2.506582105564225e-15\n",
       "Root mean squared error:  0.9424000492448669\n",
       "R2 score:  0.11099314032359531\n"
      ]
@@ -264,8 +260,6 @@
     "r2  = 1 - (ssr/sst)\n",
     "\n",
     "# printing values\n",
-    "print('Slope:' , regr.coef_)\n",
-    "print('Intercept:', regr.intercept_)\n",
     "print('Root mean squared error: ', rmse)\n",
     "print('R2 score: ', r2)\n",
     "\n"
@@ -291,6 +285,164 @@
    "source": [
     "# P3. Technical indicator - trend-line"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "daily price curve의 국소 최소값의 개수를 n이라고 할 경우, 선형보간법(linear interpolation)을 사용해 지지선(linear)를 도출할 수 있다. n == 2 경우 두 점을 이은 하나의 선형 지지선이 되지만, 지지선이 선형(linear)이므로 n >= 3일 경우 특정 local minima가 지지선에 접하지 않는 경우가 발생한다. daily price curve는 비선형이고 균등하지 않을 확률이 높으므로 모든 국소 최소값에 지지선을 맞춰 도출할 경우 지지선의 선형성(linearity)이 없어지거나, 고점 대비 낙폭이 적은 국소 최소값에 접하는 지지선을 상정할 경우 기타 국소 최소값을 침범해 지지선이 해당 최소값보다 높아지는 경우가 발생한다. 따라서 모든 국소 최소값이 지지선에 접하지 않을 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 국소최소값 찾기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_local_minima(prices): # 특정 기간의 sequencial 가격 array == prices\n",
+    "    minima = {}\n",
+    "    length = len(prices)\n",
+    "    if length >= 2: # 전체 가격 개수가 2 이상일 경우,\n",
+    "        if prices[0] < prices[1]: # 첫번째 값이 두번째 값보다 낮다면\n",
+    "            minima[0] = prices[0] # minima에 해당 시점(0)을 key로, 해당 가격을 value로 담기\n",
+    "            \n",
+    "    if length > 3: # 전체 가격 개수가 3 초과일 경우,\n",
+    "        for i in range(1, length-1): # prices의 두번째 값에서 마지막에서 두번째 값까지\n",
+    "            if prices[i] < prices[i-1] and prices[i] < prices[i+1]: # 해당 시점 가격이 이전 시점 대비 & 다음 시점 대비 낮다면\n",
+    "                minima[i] = prices[i] # minima에 해당 시점(i)을 key로, 해당 가격을 value로 담기\n",
+    "                \n",
+    "    if prices[length-1] < prices[length-2]: # prices의 마지막 시점 가격이 바로 이전 시점 가격보다 낮다면\n",
+    "        minima[length-1] = prices[length-1] # minima에 해당 시점(length-1)을 key로, 해당 가격을 value로 담기\n",
+    "        \n",
+    "    return minima # 국소최소값이 담긴 dictionary 반환\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prices = [20, 17, 16, 12, 14, 17, 23, 27, 29, 31, 27, 14, 11, 14, 17]\n",
+    "\n",
+    "t = list(find_local_minima(prices).keys())\n",
+    "p = list(find_local_minima(prices).values())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 지지선의 선형함수 계산"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2-1. 국소최소값이 2개일 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_support(x):\n",
+    "    # (y1 - y2) / (x1 - x2) == 기울기 계산식\n",
+    "    slope = (p[1] - p[0]) / (t[1] - t[0])\n",
+    "\n",
+    "    # 절편 계산식(선형보간법 보간함수)\n",
+    "    # t == 0 일때 p값 = intercept \n",
+    "    intercept = p[0] - (slope*t[0])\n",
+    "    \n",
+    "    # 특정 시점(t)에 대한 지지선 위치(s)\n",
+    "    support_line = slope*x + intercept\n",
+    "    print(\"기울기=\", round(slope, 2))\n",
+    "    print(\"절편=\", round(intercept, 2))\n",
+    "    return support_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "기울기= -0.11\n",
+      "절편= 12.33\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_support(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2-2. 국소최소값이 3개 이상일 경우"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import linear_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 변수 구분하기\n",
+    "X = np.array(t)\n",
+    "y = np.array(p)\n",
+    "\n",
+    "# linear regression 모델 선언\n",
+    "regr = linear_model.LinearRegression()\n",
+    "\n",
+    "# regression 학습\n",
+    "regr.fit(X, y)\n",
+    "\n",
+    "print(\"기울기=\", regr.intercept_)\n",
+    "print(\"절편=\", regr.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -380,29 +532,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(10, 1),\n",
-       " (9, 10),\n",
-       " (8, 9),\n",
-       " (7, 8),\n",
-       " (6, 7),\n",
-       " (5, 6),\n",
-       " (4, 5),\n",
-       " (3, 4),\n",
-       " (2, 3),\n",
-       " (1, 2)]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_possible = 20 * 19\n",
     "num_possible = []\n",
@@ -421,29 +553,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(10, 10),\n",
-       " (9, 9),\n",
-       " (8, 8),\n",
-       " (7, 7),\n",
-       " (6, 6),\n",
-       " (5, 5),\n",
-       " (4, 4),\n",
-       " (3, 3),\n",
-       " (2, 2),\n",
-       " (1, 1)]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pairs\n",
     "pairs = []\n",
@@ -456,89 +568,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(10, 8),\n",
-       " (10, 7),\n",
-       " (10, 6),\n",
-       " (10, 5),\n",
-       " (10, 4),\n",
-       " (10, 3),\n",
-       " (10, 2),\n",
-       " (9, 7),\n",
-       " (9, 6),\n",
-       " (9, 5),\n",
-       " (9, 4),\n",
-       " (9, 3),\n",
-       " (9, 2),\n",
-       " (9, 1),\n",
-       " (8, 10),\n",
-       " (8, 6),\n",
-       " (8, 5),\n",
-       " (8, 4),\n",
-       " (8, 3),\n",
-       " (8, 2),\n",
-       " (8, 1),\n",
-       " (7, 10),\n",
-       " (7, 9),\n",
-       " (7, 5),\n",
-       " (7, 4),\n",
-       " (7, 3),\n",
-       " (7, 2),\n",
-       " (7, 1),\n",
-       " (6, 10),\n",
-       " (6, 9),\n",
-       " (6, 8),\n",
-       " (6, 4),\n",
-       " (6, 3),\n",
-       " (6, 2),\n",
-       " (6, 1),\n",
-       " (5, 10),\n",
-       " (5, 9),\n",
-       " (5, 8),\n",
-       " (5, 7),\n",
-       " (5, 3),\n",
-       " (5, 2),\n",
-       " (5, 1),\n",
-       " (4, 10),\n",
-       " (4, 9),\n",
-       " (4, 8),\n",
-       " (4, 7),\n",
-       " (4, 6),\n",
-       " (4, 2),\n",
-       " (4, 1),\n",
-       " (3, 10),\n",
-       " (3, 9),\n",
-       " (3, 8),\n",
-       " (3, 7),\n",
-       " (3, 6),\n",
-       " (3, 5),\n",
-       " (3, 1),\n",
-       " (2, 10),\n",
-       " (2, 9),\n",
-       " (2, 8),\n",
-       " (2, 7),\n",
-       " (2, 6),\n",
-       " (2, 5),\n",
-       " (2, 4),\n",
-       " (1, 9),\n",
-       " (1, 8),\n",
-       " (1, 7),\n",
-       " (1, 6),\n",
-       " (1, 5),\n",
-       " (1, 4),\n",
-       " (1, 3)]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# high numbers\n",
     "highs = []\n",
@@ -562,109 +594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(10, 1),\n",
-       " (9, 10),\n",
-       " (8, 9),\n",
-       " (7, 8),\n",
-       " (6, 7),\n",
-       " (5, 6),\n",
-       " (4, 5),\n",
-       " (3, 4),\n",
-       " (2, 3),\n",
-       " (1, 2),\n",
-       " (10, 10),\n",
-       " (9, 9),\n",
-       " (8, 8),\n",
-       " (7, 7),\n",
-       " (6, 6),\n",
-       " (5, 5),\n",
-       " (4, 4),\n",
-       " (3, 3),\n",
-       " (2, 2),\n",
-       " (1, 1),\n",
-       " (10, 8),\n",
-       " (10, 7),\n",
-       " (10, 6),\n",
-       " (10, 5),\n",
-       " (10, 4),\n",
-       " (10, 3),\n",
-       " (10, 2),\n",
-       " (9, 7),\n",
-       " (9, 6),\n",
-       " (9, 5),\n",
-       " (9, 4),\n",
-       " (9, 3),\n",
-       " (9, 2),\n",
-       " (9, 1),\n",
-       " (8, 10),\n",
-       " (8, 6),\n",
-       " (8, 5),\n",
-       " (8, 4),\n",
-       " (8, 3),\n",
-       " (8, 2),\n",
-       " (8, 1),\n",
-       " (7, 10),\n",
-       " (7, 9),\n",
-       " (7, 5),\n",
-       " (7, 4),\n",
-       " (7, 3),\n",
-       " (7, 2),\n",
-       " (7, 1),\n",
-       " (6, 10),\n",
-       " (6, 9),\n",
-       " (6, 8),\n",
-       " (6, 4),\n",
-       " (6, 3),\n",
-       " (6, 2),\n",
-       " (6, 1),\n",
-       " (5, 10),\n",
-       " (5, 9),\n",
-       " (5, 8),\n",
-       " (5, 7),\n",
-       " (5, 3),\n",
-       " (5, 2),\n",
-       " (5, 1),\n",
-       " (4, 10),\n",
-       " (4, 9),\n",
-       " (4, 8),\n",
-       " (4, 7),\n",
-       " (4, 6),\n",
-       " (4, 2),\n",
-       " (4, 1),\n",
-       " (3, 10),\n",
-       " (3, 9),\n",
-       " (3, 8),\n",
-       " (3, 7),\n",
-       " (3, 6),\n",
-       " (3, 5),\n",
-       " (3, 1),\n",
-       " (2, 10),\n",
-       " (2, 9),\n",
-       " (2, 8),\n",
-       " (2, 7),\n",
-       " (2, 6),\n",
-       " (2, 5),\n",
-       " (2, 4),\n",
-       " (1, 9),\n",
-       " (1, 8),\n",
-       " (1, 7),\n",
-       " (1, 6),\n",
-       " (1, 5),\n",
-       " (1, 4),\n",
-       " (1, 3)]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_outcome"
    ]
@@ -894,6 +826,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
@@ -1088,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## mean(X) Matrix"
+    "## mean(X) Matrix & median(Y) Matrix"
    ]
   },
   {
