add Sales and Earnings

--- a/Email Coding test_Seeyong Lee.ipynb
+++ b/Email Coding test_Seeyong Lee.ipynb
@@ -273,11 +273,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Sales Growth Formula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "매출액의 과대 또는 과소계상 효과를 제거하고 정상 매출 활동으로 벌어들인 순매출을 산정하기 위해 매출채권(t, t-1)과 선수금(t, t-1)을 Sales(t), Sales(t-1)에서 각각 차감"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Sales(t) - account_receivable(t) - advanced_payment(t)) / (Sales(t-1) - account_receivable(t-1) - advanced_payment(t-1)) - 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Earnings Growth Formula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "비현금성수익 및 비용의 효과를 제거하고 영업활동과 관련된 이익만 계상하기 위해 감가상각비(t, t-1), 순매입채무증감(t, t-1)을 더하고, 순매출채권증감(t, t-1), 순재고자산증감(t, t-1)을 차감"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Earnings(t) + depreciation(t)) - net_account_receivable(t) - net_inventory(t) + net_account_payable(t) / (Earnings(t-1) + depreciation(t-1) - net_account_receivable(t-1) - net_inventory(t-1) + net_account_payable(t)) - 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,20 +471,6 @@
     "print(\"기울기=\", regr.intercept_)\n",
     "print(\"절편=\", regr.coef_)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -826,13 +847,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
@@ -1154,7 +1168,7 @@
     "    for j in range(200):\n",
     "        sum_elem = 0 # 평균 계산을 위한 총합 for Matrix X\n",
     "        list_elem = [] # median 계산을 위한 list for Matrix Y\n",
-    "        for matrix in matrices:\n",
+    "        for matrix in matrices: # 모든 Matrix를 하나씩 반복하며\n",
     "            row_by_row = matrix.split(';') # len == 200 rows인 matrix\n",
     "            a_row = [float(num) for num in row_by_row[i].split(',')] # 각 i번째 row별로 (from 0 to 199)\n",
     "            elem = a_row[j] # i 번째 row의 j 번째 element\n",
